texto do card de Yu-Gi-Oh

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                         <div class="card-info android">
                             <h2>Yu-Gi-Oh</h2>
                             <h3>HTML, CSS e JavaScript</h3>
-                            <p></p>
+                            <p>Site com cartas do mundo de Yu-Gi-Oh</p>
                             <a target="_blank" rel="external" href="https://joaoeduardo10.github.io/HTML-CSS/desafios/mapaDevWeek-Projeto-Yu-Gi-Oh/"><button class="btn">Saiba mais</button></a>
                         </div>
                     </div>
