--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                         <p>Olá, me chamo João Eduardo e sou um apaixonado por tecnologia. Meu primeiro contato com programação, foi quando vi o meu primo fazer uma calculadora com Python.  Maravilhado com tudo aquilo, quis logo aprender sobre.
                         </p>
                         <p>Hoje, já entendo algumas tecnologias voltadas para o Front-end. E continuo meus estudos, tendo sempre em mente que estamos em constante aprendizado.</p>
-                        <!--<a href="http://"><i class="fa-solid fa-cloud-arrow-down"></i>Curriculo</a>-->
+                        <a download href="./src/download/João E.pdf">Curriculo</a>
                     </div>
                     
                 </div>
