--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 <li class="list-skills"><!---list-skill CSS-->
                     <div class="list-skills-header">
                         <h4>CSS</h4>
-                        <span id="porcentagemCss">89%</span>
+                        <span id="porcentagemCss">93%</span>
                     </div>
                     <div class="progreco">
                         <span class="barra-progreco" id="css"></span>
@@ -94,7 +94,7 @@
                 <li class="list-skills"><!---list-skill JavaScript-->
                     <div class="list-skills-header">
                         <h4>JavaScript</h4>
-                        <span id="porcentagemJavaScript">80%</span>
+                        <span id="porcentagemJavaScript">90%</span>
                     </div>
                     <div class="progreco">
                         <span class="barra-progreco" id="javaScript"></span>
@@ -103,10 +103,20 @@
                 <li class="list-skills"><!---list-skill React.js-->
                     <div class="list-skills-header">
                         <h4>React.js</h4>
-                        <span id="porcentagemReact">30%</span>
+                        <span id="porcentagemReact">90%</span>
                     </div>
                     <div class="progreco">
                         <span class="barra-progreco" id="react"></span>
+                    </div>
+                </li><!--fim list-skill React.js-->
+
+                <li class="list-skills"><!---list-skill React.js-->
+                    <div class="list-skills-header">
+                        <h4>TypesCript</h4>
+                        <span id="porcentagemTypeScript">85%</span>
+                    </div>
+                    <div class="progreco">
+                        <span class="barra-progreco" id="typescript"></span>
                     </div>
                 </li><!--fim list-skill React.js-->
 
@@ -184,6 +194,19 @@
                             <p>Pokedex feito com React.js usando os Hooks: useState, useEffect e useRef. Também foi usado uma APi de Pokemons.</p>
                             <a target="_blank" rel="external" href="https://eduardopokedex.netlify.app/"><button class="btn">Saiba mais</button></a>
                             <a target="_blank" rel="external" href="https://github.com/JoaoEduardo10/react-pokedex"><button class="btn">Repositótio</button></a>
+                        </div>
+                    </div>
+
+                    <div class="card">
+                        <div class="card-img">
+                            <img src="./src/imagens/filmes.jpg" alt="Pokedex">
+                        </div>
+                        <div class="card-info android">
+                            <h2>Filmes</h2>
+                            <h3>React.js, TypesCript, react-router-dom, styled-components, react-incos</h3>
+                            <p>Aplicação React que consuta uma API de filmes.</p>
+                            <a target="_blank" rel="external" href="https://filmes-react-edu.netlify.app/"><button class="btn">Saiba mais</button></a>
+                            <a target="_blank" rel="external" href="https://github.com/JoaoEduardo10/react-filmes"><button class="btn">Repositótio</button></a>
                         </div>
                     </div>
 
