add fomulario dev

--- a/index.html
+++ b/index.html
@@ -210,6 +210,19 @@
                         </div>
                     </div>
 
+                    <div class="card">
+                        <div class="card-img">
+                            <img src="./src/imagens/formulario-dev.png" alt="Pokedex">
+                        </div>
+                        <div class="card-info android">
+                            <h2>Formulrio</h2>
+                            <h3>React.js, TypesCript, react-router-dom, styled-components</h3>
+                            <p>Formulário React que preenche daos de Programador.</p>
+                            <a target="_blank" rel="external" href="https://formulario-dev-edu.netlify.app/"><button class="btn">Saiba mais</button></a>
+                            <a target="_blank" rel="external" href="https://github.com/JoaoEduardo10/formulario-dev"><button class="btn">Repositótio</button></a>
+                        </div>
+                    </div>
+
             </div>
         </section><!--fim da section-->
     
