--- a/index.html
+++ b/index.html
@@ -223,6 +223,19 @@
                         </div>
                     </div>
 
+                    <div class="card">
+                        <div class="card-img">
+                            <img src="./src/imagens/clima.jpg" alt="Pokedex">
+                        </div>
+                        <div class="card-info android">
+                            <h2>Clima</h2>
+                            <h3>React.js, TypesCript, react-router-dom, Styled-Components, ContextApi, react-icons, React-Hooks, API</h3>
+                            <p>Site que ver o clima</p>
+                            <a target="_blank" rel="external" href="https://site-clima.netlify.app/"><button class="btn">Saiba mais</button></a>
+                            <a target="_blank" rel="external" href="https://github.com/JoaoEduardo10/react-clima"><button class="btn">Repositótio</button></a>
+                        </div>
+                    </div>
+
             </div>
         </section><!--fim da section-->
     
