add project world end new skils

--- a/index.html
+++ b/index.html
@@ -120,6 +120,36 @@
                     </div>
                 </li><!--fim list-skill React.js-->
 
+                <li class="list-skills"><!---list-skill React.js-->
+                    <div class="list-skills-header">
+                        <h4>Redux</h4>
+                        <span id="porcentagemRedux">75%</span>
+                    </div>
+                    <div class="progreco">
+                        <span class="barra-progreco" id="redux"></span>
+                    </div>
+                </li><!--fim list-skill React.js-->
+
+                <li class="list-skills"><!---list-skill CSS-->
+                    <div class="list-skills-header">
+                        <h4>Sass</h4>
+                        <span id="porcentagemSass">98%</span>
+                    </div>
+                    <div class="progreco">
+                        <span class="barra-progreco" id="sass"></span>
+                    </div>
+                </li><!--fim list-skill CSS-->
+
+                <li class="list-skills"><!---list-skill CSS-->
+                    <div class="list-skills-header">
+                        <h4>Styled-Components</h4>
+                        <span id="porcentagemStyled">96%</span>
+                    </div>
+                    <div class="progreco">
+                        <span class="barra-progreco" id="styled"></span>
+                    </div>
+                </li><!--fim list-skill CSS-->
+
             </ul><!--/fim conteiner skills-->
             
         </section><!--/fim section sobre-->
@@ -199,7 +229,7 @@
 
                     <div class="card">
                         <div class="card-img">
-                            <img src="./src/imagens/filmes.jpg" alt="Pokedex">
+                            <img src="./src/imagens/filmes.jpg" alt="Filmes">
                         </div>
                         <div class="card-info android">
                             <h2>Filmes</h2>
@@ -212,7 +242,7 @@
 
                     <div class="card">
                         <div class="card-img">
-                            <img src="./src/imagens/formulario-dev.png" alt="Pokedex">
+                            <img src="./src/imagens/formulario-dev.png" alt="Formulário">
                         </div>
                         <div class="card-info android">
                             <h2>Formulrio</h2>
@@ -225,7 +255,7 @@
 
                     <div class="card">
                         <div class="card-img">
-                            <img src="./src/imagens/clima.jpg" alt="Pokedex">
+                            <img src="./src/imagens/clima.jpg" alt="clima">
                         </div>
                         <div class="card-info android">
                             <h2>Clima</h2>
@@ -233,6 +263,19 @@
                             <p>Site que ver o clima</p>
                             <a target="_blank" rel="external" href="https://site-clima.netlify.app/"><button class="btn">Saiba mais</button></a>
                             <a target="_blank" rel="external" href="https://github.com/JoaoEduardo10/react-clima"><button class="btn">Repositótio</button></a>
+                        </div>
+                    </div>
+
+                    <div class="card">
+                        <div class="card-img">
+                            <img src="./src/imagens/world.png" alt="world">
+                        </div>
+                        <div class="card-info android">
+                            <h2>WolrdWide</h2>
+                            <h3>React.js, TypesCript, react-router-dom, Sass, redux, Material UI icons, React-Hooks</h3>
+                            <p>Site que ver estados e paies pelo mundo</p>
+                            <a target="_blank" rel="external" href="https://site-world-wide.netlify.app/"><button class="btn">Saiba mais</button></a>
+                            <a target="_blank" rel="external" href="https://github.com/JoaoEduardo10/react-world"><button class="btn">Repositótio</button></a>
                         </div>
                     </div>
 
